VacancyControllerTest + покрытие замечаний из кросс ревью